--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Accordion Generator is a free online that allows you to create responsive html css js accordion"
+      content="Accordion Customizer is a free online that allows you to create responsive html css js accordion with custom styles"
     />
     <meta name="keywords" content="html accordion, css accordion, accordion generator, css accordion generator, html, css, js, accordion customizer, accordion">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Accordion Generator</title>
+    <title>Accordion Customizer</title>
     <style>
       code[class*="language-html"]
       {
